# AET_LIO_MWE

./: README.md
rtk/: compare_gps_lio.py  rtk_data.csv  save_path.py
src/AET-LIO/: CMakeLists.txt  package.xml
src/AET-LIO/config/: lslidar.yaml
src/AET-LIO/launch/: mapping_lslidar.launch
src/AET-LIO/src/: aet_lio_node.cpp
